[package]
name = "rcon"
version = "0.1.0"
authors = ["GarfDev <garfdev.13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.2.2"
tokio = { version = "0.2.13", features = ["tcp", "io-util", "dns", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = { version = "0.15.0" }
pretty_env_logger = { version = "0.4.0" }
warp = { version = "0.2" }

[dev-dependencies]
tokio = { version = "0.2.13", features = ["macros"] }


[features]
default = ["delay"]
delay = []


